force-app/main/default/objects/QueueBustingConfig__c/QueueBustingConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains custom settings used to in the Queue busting application</description>
    <label>Queue busting App Config</label>
</CustomObject>