force-app/main/default/objects/QueueBustingConfig__c/fields/DefaultSlotDuration__c.field-meta.xml
<CustomField>
    <fullName>DefaultSlotDuration__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Contains the default duration (in minutes) for slots</description>
    <inlineHelpText>Contains the default duration (in minutes) for slots</inlineHelpText>
    <label>Default slot duration (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>