force-app/main/default/objects/QueueBustingConfig__c/fields/isCheckCustomerSlotDaysEnabled__c.field-meta.xml
<CustomField>
    <fullName>isCheckCustomerSlotDaysEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>define if we execute the timeframe check when a guest user try to create a customer slot</description>
    <label>isCheckCustomerSlotDaysEnabled</label>
    <type>Checkbox</type>
</CustomField>