force-app/main/default/objects/QueueBustingConfig__c/fields/isGeneratePdfEnabled__c.field-meta.xml
<CustomField>
    <fullName>isGeneratePdfEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to enable/disable pdf generation</description>
    <label>isGeneratePdfEnabled</label>
    <type>Checkbox</type>
</CustomField>