force-app/main/default/objects/QueueBustingConfig__c/fields/MaxNumberOfPersons__c.field-meta.xml
<CustomField>
    <fullName>MaxNumberOfPersons__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Contains the maximum number of persons allowed to come for a single booking slot</description>
    <inlineHelpText>Contains the maximum number of persons allowed to come for a single booking slot</inlineHelpText>
    <label>Maximum number of persons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>