force-app/main/default/objects/QueueBustingConfig__c/fields/NumberOfDaysAfterToCheck__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDaysAfterToCheck__c</fullName>
    <description>Number of days after a relative slot to check if a client has booked a slot (filter : &lt; datetime)</description>
    <label>NumberOfDaysAfterToCheck</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>