force-app/main/default/objects/QueueBustingConfig__c/fields/NumberOfDaysBeforeToCheck__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDaysBeforeToCheck__c</fullName>
    <description>Number of days before a relative slot to check if a client has booked a slot</description>
    <label>NumberOfDaysBeforeToCheck</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>