force-app/main/default/objects/QueueBustingConfig__c/fields/NumWeeksGeneratedSlots__c.field-meta.xml
<CustomField>
    <fullName>NumWeeksGeneratedSlots__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Contains the number of weeks that is generated from recurring slots</description>
    <inlineHelpText>Contains the number of weeks that is generated from recurring slots</inlineHelpText>
    <label>Nb Weeks for recurring slot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>