force-app/main/default/objects/QueueBustingConfig__c/fields/PdfEngine__c.field-meta.xml
<CustomField>
    <fullName>PdfEngine__c</fullName>
    <description>engine used to render pdf (default VF, accepted value VF/Heroku)</description>
    <inlineHelpText>engine used to render pdf (default VF, accepted value VF/Heroku)</inlineHelpText>
    <label>Pdf Engine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>